# cpp-bootstrap

./: .gitignore  CMakeLists.txt
.devcontainer/: devcontainer.json
include/tests/: weak.hpp
src/: main.cpp
